# ChangeLog for app-sci/setiathome
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-sci/setiathome/ChangeLog,v 1.6 2003/02/12 05:19:24 vapier Exp $

*setiathome-3.03 (19 Jul 2002)

  04 Feb 2003; Jason Wever <weeve@gentoo.org> setiathome-3.03-r1.ebuild :
  Added sparc to keywords.

  04 Nov 2002; Daniel Ahlberg <aliz@gentoo.orv> files/seti-init.d :
  Updated init.d script to take advantage of SMP. Script contributed by 
  delta407 <delta407@lerfjhax.com> in #7483.

  19 Sep 2002; Owen Stampflee <owen@gentoo.org> :
  Added PPC to KEYWORDS.

  28 Aug 2002; Ryan Phillips <rphillips@gentoo.org> files/seti-init.d-r1 :

  Fixed checkconfig() start bug.  Thx to burzmali. Fixes #6645

  19 Jul 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :

  Author: Maik Schreiber <bZ@iq-computing.de>
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.