@@ -1,6 +1,11 @@
 # ChangeLog for app-sci/setiathome
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/setiathome/ChangeLog,v 1.6 2003/02/12 05:19:24 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/setiathome/ChangeLog,v 1.7 2003/04/09 08:39:49 aliz Exp $
+
+*setiatome-3.08 (09 Apr 2003)
+
+  09 Par 2003; Daniel Ahlberg <aliz@gentoo.org> setiathome-3.08.ebuild :
+  Security update. Rewrote package fetching.
 
 *setiathome-3.03 (19 Jul 2002)
 
